--- a/WebApplication28/Areas/Client/Views/Checkout/Index.cshtml
+++ b/WebApplication28/Areas/Client/Views/Checkout/Index.cshtml
@@ -77,7 +77,7 @@
                     <input class="totalprice" name="TotalPrice" type="hidden" class="form-control" />
 
                     <input value="@ViewBag.cart" name="cartid" type="hidden" />
-                    
+                    <input value="@manager.UserManager.GetUserId(User)" name="userID" type="hidden" />
                   
                     <div class="form-group ">
                       <label asp-for="mail">Email</label>
