--- a/WebApplication28/Areas/Admin/Views/MainLayout.cshtml
+++ b/WebApplication28/Areas/Admin/Views/MainLayout.cshtml
@@ -100,7 +100,7 @@
     <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
      Account
     </button>
-    <div class="dropdown-menu " style="padding:15px">
+                            <div class="dropdown-menu " style="padding:15px;left: -60px; top: 50px;">
         
       <a asp-area="Admin" asp-controller="Admin" asp-action="Profile" asp-route-name="@User.Identity.Name">Profile</a>
       <a asp-area="Admin" asp-controller="Admin" asp-action="Logout" >LogOut</a>
