--- a/WebApplication28/Areas/Account/Views/Layout/MainLayout.cshtml
+++ b/WebApplication28/Areas/Account/Views/Layout/MainLayout.cshtml
@@ -32,15 +32,20 @@
             <ul class="navbar-nav ml-auto">
              
                 <li class="nav-item dropdown">
-                    <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user"></i> Account
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-                                <a class="dropdown-item "  asp-area="Account" asp-controller="Account" asp-action="SignIn" >Sign In</a>
-                      <a class="dropdown-item "  asp-area="Account" asp-controller="Account" asp-action="SignUp" >Sign up</a>
-                             <a class="dropdown-item "  asp-area="Admin" asp-controller="Admin" asp-action="login" >Admin Login</a>
-                    </div>
+          
+
+
+                            <div class="dropdown show">
+                                <a class=" dropdown-toggle" style="color:white;text-decoration:none" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" ">
+                                    <i class="fa fa-user"></i>   Account
+                                </a>
+
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item " asp-area="Account" asp-controller="Account" asp-action="SignIn">Sign In</a>
+                                    <a class="dropdown-item " asp-area="Account" asp-controller="Account" asp-action="SignUp">Sign up</a>
+                                    <a class="dropdown-item " asp-area="Admin" asp-controller="Admin" asp-action="login">Admin Login</a>
+                                </div>
+                            </div>
                 </li>
             </ul>
         </div>
@@ -48,12 +53,20 @@
 </nav>
         @RenderBody()
     </div>
- 
-<script src="~/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-   <script src="~/assets/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="~/vendor/jquery/jquery.min.js"></script>
-<script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="~/jquery/jquery.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+
+
+    <!-- ✅ load Bootstrap bundle ✅ -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js" integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     @RenderSection("Validationscripts",required:false);
 </body>
